--- a/client/src/app/components/books/books.component.html
+++ b/client/src/app/components/books/books.component.html
@@ -1,25 +1,85 @@
-<h1 class="my-4">
-    <small>Popular books</small>
-</h1>
+<h5 class="my-3" style="font-weight: bold;">Recommanded books for you</h5>
 <div>
-    <h4>Popular books in Classics</h4><a href="#">More in Classics</a>
     <hr>
     <div class="row justify-content-center">
-        <div class="col-md-2">
+        <div class="col-md-2 mb-3">
             <div class="card">
                 <img style="width: 100%;height: 50%;"
                     src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
                     alt="...">
             </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 mb-3">
             <div class="card">
                 <img style="width: 100%;height: 50%;"
                     src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
                     alt="...">
             </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 mb-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
             <div class="card">
                 <img style="width: 100%;height: 50%;"
                     src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
@@ -27,31 +87,10 @@
             </div>
         </div>
 
-        <div class="col-md-2">
-            <div class="card">
-                <img style="width: 100%;height: 50%;"
-                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
-                    alt="...">
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="card">
-                <img style="width: 100%;height: 50%;"
-                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
-                    alt="...">
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="card">
-                <img style="width: 100%;height: 50%;"
-                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
-                    alt="...">
-            </div>
-        </div>
+
     </div>
-    <hr>
     <div>
-        <h4>Popular books in Sport</h4><a href="#">More in Sport</a>
+        <h5 class="my-4" style="font-weight: bold;" >Most rated books</h5>
         <hr>
         <div class="row justify-content-center">
             <div class="col-md-2">
