--- a/client/src/app/components/detailshelf/detailshelf.component.html
+++ b/client/src/app/components/detailshelf/detailshelf.component.html
@@ -1,6 +1,4 @@
-<h3 class="my-4">
-    <small>{{shelf?.name | titlecase }}</small>
-</h3>
+<h5 class="my-3" style="font-weight: bold;">{{shelf?.name | titlecase }}</h5>
 <form>
     <div class="form-group">
         <div class="row">
