--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -1,6 +1,5 @@
-<h3 class="my-4">
-    <small>Search results</small>
-</h3>
+<h5 class="my-3" style="font-weight: bold;">Search results</h5>
+
 <form #searchBook="ngForm" (ngSubmit)="advancedSearchBooks(searchBook,0)">
     <div class="from row">
         <div class="form-group col  ">
